--- a/src/style.scss
+++ b/src/style.scss
@@ -98,33 +98,92 @@
                 padding: 10px;
                 justify-content: space-between;
                 color: #ddddf7;
+
+                .logo{
+                    font-weight: bold;
+                }
+    
+                .user{
+                    display: flex;
+                    gap: 10px;
+    
+                    img{
+                        background-color: #ddddf7;
+                        height: 24px;
+                        width: 24px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+        
+                    button{
+                        background-color: #5d5b8d;
+                        color: #ddddf7;
+                        font-size: 10px;
+                        border: none;
+                        cursor: pointer;
+                    }
+    
+                }
+
             }
 
-            .logo{
-                font-weight: bold;
+            .search{
+                border-bottom: 1px solid gray;
+
+                .searchForm{
+                    padding: 10px;
+                    input{
+                        background-color: transparent;
+                        border: none;
+                        color: white;
+                        outline: none;
+
+                        &::placeholder{
+                            color: lightgray;
+                        }
+                    }
+                }
             }
 
-            .user{
+            .userChat{
+                padding: 5px;
                 display: flex;
+                align-items: center;
                 gap: 10px;
-            }
-
-            img{
-                background-color: #ddddf7;
-                height: 24px;
-                width: 24px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
-
-            button{
-                background-color: #5d5b8d;
-                color: #ddddf7;
-                font-size: 10px;
-                border: none;
+                color: white;
                 cursor: pointer;
+
+                &:hover{
+                    background-color: #2f2d52;
+                }
+
+                img{
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 40%;
+                    object-fit: cover;
+                }
+
+                .userCHatInfo{
+                    
+                    span{
+                        font-size: 14px;
+                        font-weight: 500;
+                    }
+
+                    p{
+                        font-size: 10px;
+                        color: lightgray;
+                    }
+                }
             }
+
+
+           
         }
-        .chat{flex: 2;}
+
+        .chat{
+            flex: 2;
+        }
     }
 }
