--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,23 @@
+@mixin mobile{
+    @media screen and (max-width:480px) {
+        @content
+    }
+}
+
+@mixin tablet{
+    @media screen and (max-width:768px) {
+        @content
+    }
+}
+
+@mixin laptop{
+    @media screen and (max-width:1200px) {
+        @content
+    }
+}
+
+
+
 .formContainer{
     background-color: #a7bcff;
     height: 100vh;
@@ -85,10 +105,14 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include tablet{
+           width: 90%;
+        }
 
         .sidebar{
             flex: 1;
             background-color: #3e3c61;
+            position: relative;
 
             .navbar{
                 display: flex;
@@ -101,6 +125,9 @@
 
                 .logo{
                     font-weight: bold;
+                    @include tablet{
+                        display: none;
+                    }
                 }
     
                 .user{
@@ -121,6 +148,10 @@
                         font-size: 10px;
                         border: none;
                         cursor: pointer;
+                        @include tablet{
+                            position: absolute;
+                            bottom: 10px;
+                        }
                     }
     
                 }
